<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_half"
    app:cardCornerRadius="@dimen/cardview_rv_item_radius"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_article_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/article_image"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <LinearLayout
            android:id="@+id/item_article_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_half"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_article_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_half"
                android:background="@drawable/article_item_category_background"
                android:paddingHorizontal="@dimen/padding_quarter"
                android:textColor="@color/white"
                tools:text="@string/category" />

            <TextView
                android:id="@+id/item_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_quarter"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?android:textColorPrimary"
                tools:text="@string/lorem_ipsum_title" />

            <TextView
                android:id="@+id/item_article_snippet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_quarter"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/lorem_ipsum_body" />

            <TextView
                android:id="@+id/item_article_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAllCaps="false"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/byline"
                tools:text="@string/by" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
